--- a/index.html
+++ b/index.html
@@ -19,15 +19,61 @@
       <!-- ASIDE -->
       <div class="aside-bar">
 
+        <div class="logo">
+          <img src="img/logo.svg" alt="Logo">
+        </div>
+
+        <div class="aside-menu">
+          <ul>
+            <li><a class="active" href="#"><img src="img/home.svg" alt="Home">Home</a></li>
+            <li><a href="#"><img src="img/search.svg" alt="Cerca">Cerca</a></li>
+            <li><a href="#"><img src="img/libreria.svg" alt="Libreria">La tua libreria</a></li>
+          </ul>
+        </div>
+
+        <div class="playlists">
+          <h3>Playlist</h3>
+          <ul>
+            <li><a href="#"><div class="add">+</div> Crea playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+          </ul>
+        </div>
+
+        <!-- <div class="profile">
+          <div class="install">
+            <img src="img/download.svg" alt="">
+          </div>
+        </div> -->
+
       </div>
       <!-- /ASIDE -->
 
       <!-- COVERS -->
       <div class="main-covers">
-        <div class="call-to-action"></div>
+
+        <div class="call-to-action">
+          <a id="upgrade" href="#">effettua l'upgrade</a>
+        </div>
+        <nav>
+          <ul>
+            <li><a class="active" href="#">In evidenza</a></li>
+            <li><a href="#">Podcast</a></li>
+            <li><a href="#">Classifiche</a></li>
+            <li><a href="#">Generi e mood</a></li>
+            <li><a href="#">Nuove uscite</a></li>
+            <li><a href="#">Scopri</a></li>
+          </ul>
+        </nav>
         <div class="debug-content">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque consectetur voluptatum quos? Quo, odit quisquam porro perferendis nulla eos laudantium voluptates, voluptate consectetur facere nobis blanditiis optio numquam sapiente ut. Harum tempora incidunt vero maiores a. Minus, consectetur dolorem natus odio ratione aliquam dicta tempora sunt eveniet nulla officia tenetur commodi distinctio nisi sint deleniti architecto quam at explicabo beatae sequi voluptatum ipsa, necessitatibus reiciendis! Aperiam illo quo alias impedit maxime unde beatae ullam cupiditate! Vero incidunt eaque vitae. Corporis illo quibusdam sunt ipsa sed maxime voluptates, voluptatibus accusantium labore veniam possimus veritatis unde sit minus esse, et culpa officia modi quo iste at voluptas. Ad, ea placeat iusto aliquid labore, sit excepturi atque dolorum illo quas expedita animi culpa nulla molestias eveniet ratione aperiam voluptate deserunt facilis fugit voluptates maiores odio aspernatur? Ex consequatur beatae expedita, adipisci, nisi rerum consequuntur doloribus veritatis ipsa at obcaecati. Ducimus eos dolor nulla atque id voluptas eaque accusamus, rerum beatae eligendi nam reiciendis nihil quod. Veritatis, ratione? Temporibus praesentium dicta dignissimos at eaque nisi labore nobis sit! Obcaecati repellat eligendi itaque adipisci similique odit, vero nemo autem iste aliquam eveniet ipsam maxime eum saepe sunt odio delectus voluptate necessitatibus ad. Fugiat dolore ut modi distinctio provident nisi cum inventore quaerat quos ullam ipsum, vero, nostrum adipisci. Facere dolor magnam rem incidunt eos adipisci numquam voluptas et aperiam dicta. Amet fugit eum, mollitia quod, est ipsam hic ex ratione voluptatibus aperiam odit harum eligendi quam soluta adipisci deserunt. Voluptatem quibusdam earum natus. A non, nostrum dignissimos suscipit optio reprehenderit itaque, sequi at porro, rerum totam dolorem eos dicta autem reiciendis. Nemo aperiam ad quas totam tenetur quod officia dolore. Ducimus commodi facilis officia dolorem obcaecati. Dignissimos eius deleniti maxime eos commodi atque ipsam doloribus magni ducimus. Repellendus quae ratione dolorem. Illum a nihil quisquam blanditiis neque harum quas itaque repellat eum ipsam commodi, quaerat quibusdam vel delectus eveniet quia at impedit nobis laborum fugit ad reiciendis minus ratione. Dolor molestiae quidem quo dignissimos, earum, ratione consequatur magni cupiditate, illum quod ipsum quisquam possimus error quaerat sequi laudantium aut voluptas tempora neque culpa distinctio excepturi quos. Nostrum pariatur cupiditate a, tempora iure nam illo necessitatibus, et error illum dolores! Ullam exercitationem consequatur obcaecati corrupti repellendus laboriosam vero tenetur sit! Possimus labore commodi, corporis fuga deserunt eum, amet ex eveniet obcaecati suscipit a tenetur aut aliquid exercitationem neque sit! Molestias perferendis earum error odit sapiente ratione minus accusamus, voluptatum illo sed recusandae iure magni reprehenderit, fugit nisi facere obcaecati ea? Doloremque fugit tenetur dolores consequuntur quos neque voluptatibus aut soluta ipsam deleniti iure voluptates, nostrum distinctio? Maiores delectus dignissimos natus, voluptas tempora libero voluptatum totam reiciendis ab sequi amet dicta labore? Inventore quas voluptas suscipit modi id mollitia, odio blanditiis maxime vero eos expedita voluptates quos iste ea eveniet hic magnam fuga rem earum necessitatibus. Unde vitae adipisci numquam ab, similique quaerat voluptatum quod minima velit qui maxime, veritatis sapiente delectus reprehenderit cupiditate, doloremque deleniti veniam expedita culpa tempora esse alias. Obcaecati deleniti eum incidunt, enim repudiandae, ut, quae ipsum dolore dolorem maiores asperiores repellendus modi quidem commodi dolores tempora distinctio laudantium exercitationem dolorum? Aliquid, ipsa possimus. Placeat, iure cupiditate. Dolorem tempore officia nulla blanditiis hic sequi praesentium quibusdam repudiandae officiis? Numquam amet tempora sunt in molestiae excepturi mollitia ea eveniet, odit nam natus commodi repudiandae aliquam, velit reprehenderit dolorum corrupti nihil iure nobis magnam debitis placeat eligendi ex? Commodi molestias omnis unde. Quos assumenda, odio ratione molestias in odit a reprehenderit nostrum soluta animi officiis at inventore earum sit sed quod temporibus. Doloribus veniam magnam non neque eum suscipit reiciendis accusamus tenetur porro, eius libero ea, reprehenderit, at consectetur itaque recusandae iste quaerat numquam fugiat ad soluta natus facilis. Quod optio provident velit eveniet saepe dignissimos cumque consectetur laborum aut facere, natus explicabo fugit numquam alias excepturi nostrum voluptate itaque minus labore vel. Dolorum sit accusantium id, quas quasi laborum velit esse sed rem fugiat officiis neque labore doloremque reprehenderit, facere vel aperiam nisi quo mollitia dolor eius. Esse doloremque consequuntur vitae necessitatibus quisquam delectus quasi placeat, a qui. Eaque iure qui voluptatibus vitae maxime a officia cumque! Cupiditate quos tempora a. Tempore assumenda voluptatibus velit accusantium! Aspernatur est iure aliquam iusto voluptatum a libero ipsam deleniti adipisci sunt aperiam culpa accusamus quis provident itaque, possimus inventore labore necessitatibus delectus voluptate nisi incidunt animi. Illum sint necessitatibus saepe, quod facere qui quia reprehenderit! Ut optio voluptates sit enim excepturi natus nisi eveniet animi a. Delectus debitis corporis aliquam illum perferendis dolor blanditiis laudantium nulla ut alias. Incidunt unde necessitatibus laborum non. Ab adipisci cupiditate soluta voluptatum vitae dolore quas cum rem porro laboriosam, impedit pariatur odit vero, dignissimos eius sit iste? Tempore nulla possimus neque quibusdam explicabo ut assumenda tenetur officia distinctio porro aspernatur dicta, non repellendus nostrum corporis quasi deleniti amet nobis voluptate error! Blanditiis dignissimos, cumque porro accusantium esse, rerum dolorem 
         </div>
+
       </div>
       <!-- COVERS -->
     </main>
@@ -35,7 +81,9 @@
 
     <!-- FOOTER -->
     <footer>
-
+      <div class="song-info"></div>
+      <div class="player"></div>
+      <div class="volume"></div>
     </footer>
     <!-- /FOOTER -->
 
