--- a/index.html
+++ b/index.html
@@ -23,44 +23,39 @@
 
         <!-- ASIDE-TOP -->
         <div class="aside-bar-top">
-          <div class="logo">
-            <img src="img/logo.svg" alt="Logo">
+
+          <div class="logo-img">
+            <img src="img/logo.svg" alt="">
           </div>
-  
+
           <div class="aside-menu">
             <ul>
               <li><a class="active" href="#"><img src="img/home.svg" alt="Home">Home</a></li>
-              <li><a href="#"><img src="img/search.svg" alt="Cerca">Cerca</a></li>
-              <li><a href="#"><img src="img/libreria.svg" alt="Libreria">La tua libreria</a></li>
+              <li><a href="#"><img src="img/search.svg" alt="Home">Cerca</a></li>
+              <li><a href="#"><img src="img/libreria.svg" alt="Home">La tua libreria</a></li>
+            </ul>
+          </div>
+
+          <div class="aside-playlists">
+            <h3>Playlists</h3>
+            <ul>
+              <li><a class="add" href="#">Crea Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
             </ul>
           </div>
   
-          <div class="playlists">
-            <h3>Playlist</h3>
-            <ul>
-              <li><a class="add" href="#">Crea playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-            </ul>
-          </div>
         </div>
         <!-- /ASIDE-TOP -->
         
         <!-- ASIDE-BOTTOM -->
         <div class="aside-bar-bottom">
-          <div class="install">
-            <img src="img/download.svg" alt="Download">
-            <a href="#">Installa app</a>
-          </div>
-          <div class="profile">
-            <img src="img/profile.svg" alt="Profile">
-            <a href="#">John Doe</a>
-          </div>
+          
         </div>
         <!-- /ASIDE-BOTTOM -->
 
