correzioni a svg link menu

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
           <div class="logo-img">
             <img src="img/logo.svg" alt="Logo">
-          </div>
+          </div> <!-- logo -->
           <div class="logo-img-small">
             <img src="img/logo-small.svg" alt="Logo">
-          </div>
+          </div> <!-- logo small -->
 
           <div class="aside-menu">
             <ul>
@@ -37,14 +37,14 @@
               <li><a href="#"><img src="img/search.svg" alt="Cerca">Cerca</a></li>
               <li><a href="#"><img src="img/libreria.svg" alt="Libreria">La tua libreria</a></li>
             </ul>
-          </div>
+          </div> <!-- aside menu -->
           <div class="aside-menu-small">
             <ul>
-              <li><a href="#"><img src="img/home.svg" alt="Home"></a></li>
+              <li><a class="active" href="#"><img src="img/home.svg" alt="Home"></a></li>
               <li><a href="#"><img src="img/search.svg" alt="Cerca"></a></li>
               <li><a href="#"><img src="img/libreria.svg" alt="Libreria"></a>/li>
             </ul>
-          </div>
+          </div> <!-- aside menu small -->
 
           
           <div class="aside-playlists">
